[gd_scene load_steps=70 format=3 uid="uid://bbahnktvnkse3"]

[ext_resource type="Script" path="res://Scenes/Scripts/Enemy AI/burning_ember.gd" id="1_rmhwa"]
[ext_resource type="Texture2D" uid="uid://cpwdnmkwoc0mc" path="res://Sprites/Characters and items/green_slime_shadow.png" id="2_1saof"]
[ext_resource type="Texture2D" uid="uid://hukcqlfo2oe2" path="res://Sprites/Characters and items/Burning_Ember.png" id="3_niv0u"]
[ext_resource type="Texture2D" uid="uid://can7kmxf1e788" path="res://Sprites/World/light.png" id="4_xngq8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h6e66"]
atlas = ExtResource("3_niv0u")
region = Rect2(26, 62, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr0rs"]
atlas = ExtResource("3_niv0u")
region = Rect2(39, 62, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_71nlv"]
atlas = ExtResource("3_niv0u")
region = Rect2(52, 62, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_15abx"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 62, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_oekcy"]
atlas = ExtResource("3_niv0u")
region = Rect2(78, 62, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_60sit"]
atlas = ExtResource("3_niv0u")
region = Rect2(0, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r22x"]
atlas = ExtResource("3_niv0u")
region = Rect2(13, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpyst"]
atlas = ExtResource("3_niv0u")
region = Rect2(26, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ohd7"]
atlas = ExtResource("3_niv0u")
region = Rect2(39, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8c8a"]
atlas = ExtResource("3_niv0u")
region = Rect2(52, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhu2g"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bu8o"]
atlas = ExtResource("3_niv0u")
region = Rect2(78, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7sso"]
atlas = ExtResource("3_niv0u")
region = Rect2(0, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r24v"]
atlas = ExtResource("3_niv0u")
region = Rect2(13, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecjfw"]
atlas = ExtResource("3_niv0u")
region = Rect2(26, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_71gjb"]
atlas = ExtResource("3_niv0u")
region = Rect2(39, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c2v"]
atlas = ExtResource("3_niv0u")
region = Rect2(52, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xnaq"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs66u"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_cshw4"]
atlas = ExtResource("3_niv0u")
region = Rect2(78, 93, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkp2y"]
atlas = ExtResource("3_niv0u")
region = Rect2(0, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d1eg"]
atlas = ExtResource("3_niv0u")
region = Rect2(13, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_x67re"]
atlas = ExtResource("3_niv0u")
region = Rect2(26, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sohh"]
atlas = ExtResource("3_niv0u")
region = Rect2(39, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_al3ff"]
atlas = ExtResource("3_niv0u")
region = Rect2(52, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay2gk"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfwty"]
atlas = ExtResource("3_niv0u")
region = Rect2(78, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0716"]
atlas = ExtResource("3_niv0u")
region = Rect2(0, 155, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmm35"]
atlas = ExtResource("3_niv0u")
region = Rect2(13, 155, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mxp3"]
atlas = ExtResource("3_niv0u")
region = Rect2(26, 155, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_itxtj"]
atlas = ExtResource("3_niv0u")
region = Rect2(39, 155, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_17rlc"]
atlas = ExtResource("3_niv0u")
region = Rect2(52, 155, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_vym5m"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 155, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_60wmo"]
atlas = ExtResource("3_niv0u")
region = Rect2(78, 124, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_060r3"]
atlas = ExtResource("3_niv0u")
region = Rect2(0, 0, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsosj"]
atlas = ExtResource("3_niv0u")
region = Rect2(13, 0, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx4ev"]
atlas = ExtResource("3_niv0u")
region = Rect2(26, 0, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssya3"]
atlas = ExtResource("3_niv0u")
region = Rect2(39, 0, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h1wb"]
atlas = ExtResource("3_niv0u")
region = Rect2(52, 0, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fih51"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 0, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpkrb"]
atlas = ExtResource("3_niv0u")
region = Rect2(78, 0, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu3wu"]
atlas = ExtResource("3_niv0u")
region = Rect2(0, 31, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_83uyo"]
atlas = ExtResource("3_niv0u")
region = Rect2(13, 31, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhlhx"]
atlas = ExtResource("3_niv0u")
region = Rect2(26, 31, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_twtnp"]
atlas = ExtResource("3_niv0u")
region = Rect2(39, 31, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1ofm"]
atlas = ExtResource("3_niv0u")
region = Rect2(52, 31, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy3ar"]
atlas = ExtResource("3_niv0u")
region = Rect2(65, 31, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkqpu"]
atlas = ExtResource("3_niv0u")
region = Rect2(78, 31, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_26pcf"]
atlas = ExtResource("3_niv0u")
region = Rect2(0, 62, 13, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xwba"]
atlas = ExtResource("3_niv0u")
region = Rect2(13, 62, 13, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_3mwt3"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_h6e66")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_hr0rs")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_71nlv")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_15abx")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_oekcy")
}, {
"duration": 7.0,
"texture": SubResource("AtlasTexture_60sit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r22x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpyst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ohd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8c8a")
}],
"loop": true,
"name": &"Charge",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhu2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bu8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7sso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r24v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecjfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71gjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xnaq")
}],
"loop": true,
"name": &"Dash_Left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs66u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cshw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkp2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d1eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x67re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sohh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al3ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay2gk")
}],
"loop": true,
"name": &"Dash_Right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfwty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmm35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mxp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itxtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17rlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vym5m")
}],
"loop": true,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60wmo")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_060r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsosj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx4ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssya3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h1wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fih51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpkrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu3wu")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83uyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhlhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twtnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1ofm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy3ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkqpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26pcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xwba")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fudju"]
length = 0.75
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ember_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.65, 0.675, 0.7, 0.725),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ember_Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Charge"]
}

[sub_resource type="Animation" id="Animation_325tt"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ember_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ember_Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Dash_Left"]
}

[sub_resource type="Animation" id="Animation_2sspn"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ember_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ember_Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Dash_Right"]
}

[sub_resource type="Animation" id="Animation_3bf68"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ember_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ember_Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i7suh"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ember_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ember_Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Hurt"]
}

[sub_resource type="Animation" id="Animation_1nnmw"]
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ember_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ember_Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Left"]
}

[sub_resource type="Animation" id="Animation_lux7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j33ui"]
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ember_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ember_Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Right"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g653d"]
_data = {
"Charge": SubResource("Animation_fudju"),
"Dash_Left": SubResource("Animation_325tt"),
"Dash_Right": SubResource("Animation_2sspn"),
"Death": SubResource("Animation_3bf68"),
"Hurt": SubResource("Animation_i7suh"),
"Left": SubResource("Animation_1nnmw"),
"RESET": SubResource("Animation_lux7v"),
"Right": SubResource("Animation_j33ui")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7lpwe"]
radius = 44.0
height = 90.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5srph"]
radius = 47.0
height = 94.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hqm7n"]
radius = 1692.96

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kruy"]
bg_color = Color(0.0509804, 0.129412, 0.0470588, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ep7it"]
bg_color = Color(0.360784, 0.556863, 0.168627, 1)

[node name="Burning_Ember" type="CharacterBody2D" groups=["Enemy"]]
process_mode = 1
collision_layer = 5
collision_mask = 3
motion_mode = 1
script = ExtResource("1_rmhwa")

[node name="GreenSlimeShadow" type="Sprite2D" parent="."]
modulate = Color(4, 0.5, 1, 0.507)
position = Vector2(0, 107)
scale = Vector2(8, 8)
texture = ExtResource("2_1saof")

[node name="Ember_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -53)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_3mwt3")
animation = &"Death"
autoplay = "Right"

[node name="Ember_Light" type="PointLight2D" parent="Ember_Sprite"]
position = Vector2(0, 4)
scale = Vector2(0.0813783, 0.0813783)
color = Color(1, 0.417333, 0.08, 1)
energy = 12.0
texture = ExtResource("4_xngq8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(6.3, 14.6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g653d")
}

[node name="Dashtimer" type="Timer" parent="."]
wait_time = 3.75
one_shot = true

[node name="hurttimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Stopwatch" type="Timer" parent="."]
wait_time = 0.017
autostart = true

[node name="Particle_Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 128

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7lpwe")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5srph")

[node name="Movement_circle" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movement_circle"]
shape = SubResource("CircleShape2D_hqm7n")

[node name="Health_Metre" type="ProgressBar" parent="."]
offset_left = -52.0
offset_top = 105.0
offset_right = 52.0
offset_bottom = 113.0
theme_override_styles/background = SubResource("StyleBoxFlat_6kruy")
theme_override_styles/fill = SubResource("StyleBoxFlat_ep7it")
max_value = 18.0
value = 9.0
show_percentage = false

[connection signal="timeout" from="Stopwatch" to="." method="_on_stopwatch_timeout"]
[connection signal="timeout" from="Particle_Timer" to="." method="_on_particle_timer_timeout"]
